force-app/main/default/objects/APL_Account_Revenue__c/APL_Account_Revenue__c.object-meta.xml
<CustomObject>
    <label>Account Revenue</label>
    <nameField>
        <label>APL Account Revenue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>