force-app/main/default/objects/APL_Account_Revenue__c/fields/customer_nbr__c.field-meta.xml
<CustomField>
    <fullName>customer_nbr__c</fullName>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>