force-app/main/default/objects/APL_Account_Revenue__c/fields/fml_account_code__c.field-meta.xml
<CustomField>
    <fullName>fml_account_code__c</fullName>
    <label>FML Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>