force-app/main/default/objects/APL_Account_Revenue__c/fields/USD_Amount__c.field-meta.xml
<CustomField>
    <fullName>USD_Amount__c</fullName>
    <label>USD Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>